# fingerprint-engine

./: .gitignore  PR_DESCRIPTION.md
.github/workflows/: ci.yml  release.yml
fingerprint-engine/: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  SECURITY.md  VERSIONING.md  cli.py  pyproject.toml  requirements.txt
fingerprint-engine/benchmarks/: RESULTS.md  accuracy-baseline.json  accuracy.py  baseline-results.json  benchmark.py  hash_capture.py  heavy_handlers.py  pre-optimization-results.json  tier4-results.json
fingerprint-engine/core/: fft_pipeline.py  fingerprinter.py  index.py  models.py
fingerprint-engine/fingerprint_engine/: __init__.py  cli.py  service.py
fingerprint-engine/fingerprint_engine/core/: __init__.py  backends.py  dedup.py  exceptions.py  fft_pipeline.py  fingerprinter.py  format_version.py  index.py  models.py
fingerprint-engine/fingerprint_engine/core/index/: __init__.py  _common.py  base.py  memory.py  postgres.py  redis.py  sqlite.py
fingerprint-engine/fingerprint_engine/handlers/: __init__.py  archive_handler.py  audio_handler.py  base.py  binary_handler.py  embedders.py  embedding_handler.py  image_handler.py  image_phash_handler.py  pdf_handler.py  text_handler.py  video_handler.py
fingerprint-engine/handlers/: base.py  binary_handler.py  image_handler.py  pdf_handler.py  text_handler.py
fingerprint-engine/tests/: _fixtures.py  conftest.py  test_accuracy.py  test_archive_handler.py  test_backend_missing_deps.py  test_cli.py  test_dedup.py  test_derivation_golden.py  test_fft_pipeline.py  test_fingerprinter.py  test_format_version.py  test_handler_config.py  test_handlers.py  test_heavy_handlers.py  test_heavy_handlers_bench.py  test_image_phash.py  test_index.py  test_index_backends.py  test_index_matching.py  test_index_parity.py  test_index_persistence.py  test_index_search.py  test_index_surrogate.py  test_logging.py  test_models.py  test_models_slots.py  test_packaging.py  test_public_surface.py  test_resource_limits.py  test_service.py
