[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fingerprint-engine"
version = "0.1.0"
description = "Universal file fingerprinting engine (Shazam-style) with pluggable index backends"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Casey Sinclair", email = "csinclair1778@proton.me" }]
keywords = ["fingerprinting", "similarity", "fft", "shazam", "deduplication", "search"]

# numpy is the only hard runtime dependency (the FFT pipeline). Everything else
# is lazily imported by a specific handler/backend and lives behind an extra.
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
image = ["Pillow>=9.0"]
audio = ["scipy>=1.9", "pydub>=0.25"]
pdf = ["pypdf>=3.0"]
redis = ["redis>=4.0"]
postgres = ["psycopg[binary]>=3.1"]
all = ["Pillow>=9.0", "scipy>=1.9", "pydub>=0.25", "pypdf>=3.0", "redis>=4.0", "psycopg[binary]>=3.1"]
dev = [
    "fingerprint-engine[all]",
    "pytest>=7.0",
    "fakeredis>=2.0",
    "ruff>=0.5",
    "mypy>=1.8",
]

[project.scripts]
fingerprint-engine = "fingerprint_engine.cli:main"

[tool.setuptools.packages.find]
include = ["fingerprint_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# tests and benchmarks bootstrap sys.path before importing the package.
"tests/*" = ["E402"]
"benchmarks/*" = ["E402"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
