[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fingerprint-engine"
version = "0.1.0"
description = "Universal file fingerprinting engine (Shazam-style) with pluggable index backends"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Casey Sinclair", email = "csinclair1778@proton.me" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["fingerprinting", "similarity", "fft", "shazam", "deduplication", "search"]
# NOTE: the license is declared via the PEP 639 SPDX `license` expression above.
# Modern setuptools rejects the legacy "License :: OSI Approved :: ..." trove
# classifier when a SPDX expression is present (they are mutually exclusive), so
# it is intentionally omitted here.
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]

# numpy is the only hard runtime dependency (the FFT pipeline). Everything else
# is lazily imported by a specific handler/backend and lives behind an extra.
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
image = ["Pillow>=9.0"]
audio = ["scipy>=1.9", "pydub>=0.25"]
pdf = ["pypdf>=3.0"]
# Video keyframe fingerprinting: PyAV (ffmpeg bindings) decodes frames and
# Pillow canonicalizes each keyframe to the shared 256x256 grayscale grid. Both
# are lazily imported by VideoFileHandler, so a core-only install never needs
# them and importing the package never pulls them in.
video = ["av>=10.0", "Pillow>=9.0"]
# Embedding-sequence fingerprinting: the precomputed-vector path (.npy/.jsonl)
# is numpy-only (the one core dep) and always available. This extra provides a
# default encoder for the optional encode-on-load path; it is lazily imported
# only when a concrete Embedder is wired in. A lightweight, no-torch alternative
# is model2vec (static distilled embeddings, e.g. minishlab/potion-base-8M);
# benchmarks/heavy_handlers.py uses it to exercise the real encode-on-load path.
embeddings = ["sentence-transformers>=2.2"]
redis = ["redis>=4.0"]
postgres = ["psycopg[binary]>=3.1"]
# HTTP service (fingerprint_engine.service): the FastAPI app + the ASGI server
# to run it. python-multipart is required by Starlette to parse file uploads.
# All lazily imported, so a core-only install never needs these.
service = ["fastapi>=0.100", "uvicorn>=0.23", "python-multipart>=0.0.6"]
all = [
    "Pillow>=9.0",
    "scipy>=1.9",
    "pydub>=0.25",
    "pypdf>=3.0",
    "av>=10.0",
    "sentence-transformers>=2.2",
    "redis>=4.0",
    "psycopg[binary]>=3.1",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "python-multipart>=0.0.6",
]
dev = [
    "fingerprint-engine[all]",
    "pytest>=7.0",
    "fakeredis>=2.0",
    "httpx>=0.24",
    "ruff>=0.5",
    "mypy>=1.8",
    # Video-writer deps used ONLY by the heavy-handler benchmark/tests to
    # synthesize tiny clips (imageio.mimsave + the bundled ffmpeg). The video
    # handler itself decodes via the [video] extra (av); these write the
    # fixtures the benchmark reads back, so they live with the other test deps.
    "imageio>=2.30",
    "imageio-ffmpeg>=0.4",
]

[project.scripts]
fingerprint-engine = "fingerprint_engine.cli:main"

[tool.setuptools.packages.find]
include = ["fingerprint_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the repo root on sys.path so tests import the package without a per-file
# sys.path bootstrap (the editable install also provides it; this makes a
# non-installed checkout runnable too).
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# tests and benchmarks bootstrap sys.path before importing the package.
"tests/*" = ["E402"]
"benchmarks/*" = ["E402"]
# The HTTP service uses FastAPI's request-parameter dependency markers
# (File(...)/Query(...)) as argument defaults. That is the framework's intended,
# documented idiom -- FastAPI introspects these defaults to build the request
# schema -- so B008 ("no function call in argument defaults") is a false
# positive here and is ignored only for this module.
"fingerprint_engine/service.py" = ["B008"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
